@@ -4,6 +4,8 @@ version 7.4
 
 * added better obfuscation around encodedcommand
 * added new third party module google analytics attack: # https://github.com/ZonkSec/google-analytics-attack. Walkthrough here: http://www.zonksec.com/blog/social-engineering-google-analytics/
+* converted alphanumeric shellcode to accept DNS names
+* changed alphanumeric shellcode to reverse_https instead of reverse_tcp
 
 ~~~~~~~~~~~~~~~~
 version 7.3.16
